2.0pre14
    Have prepared batch use the statement locator

2.0pre13
    Allow setting attributes on statement contexts for batches and prepared batches

    SQLStatement.setNull*(...)

2.0pre12
    [bugfix] Pass statement context into result mapped queries

2.0pre11
    Create the StatementContext to allow for tunneling state into the various
    client defined tweakables

2.0pre10
    allow numbers in named params

2.0pre9
    Fix up IDBI to have the DBI functional methods and not the config methods

2.0pre8
    Add double quote handling to named param magic

2.0pre7
    Added Oracle DML Returning features

2.0pre6
    Pluggable statement builders

    More literal characters in the named statement parser

2.0pre5
    Improve grammar for named param parsing (_ @ and _ in LITERAL)

2.0pre4
    Switch to an ANTLR based grammar for named param parsing

2.0pre3
    JDBC4 Style "Ease of Development" and API Docs

2.0pre2
    Flesh out convenience APIS

2.0pre1
    Complete Rewrite

1.4.5
    Fix bug in caching added in 1.4.4

    Optimize statement literal or named statement detection

1.4.4
    Allow for create/drop/alter statements

    Cache whether or not a driver supports asking for prepared statement parameter types

1.4.3
    Handle drivers (such as Oracle) which throw an exception when trying to retrieve
    prepared statement parameter type information.

1.4.2
    Be explicit about target jdk version (1.4) for this branch

1.4.1
    Fixed bug where null is being set via setObject instead of setNull
    Thank you, Simone Gianni!

1.4.0
    Expose the new functionality on interfaces as well as concrete classes

1.3.3
    Expose the handle decorator functionality on the IDBI interface

    Add a script locator mechanism analogous to the statement locator

1.3.2
    Save SQLException to provide more information to the DBIException on
    statement execution

1.3.1
    Issue with a matcher not being reset which only showed up under jdk 1.5. Thank you Patrick!
